force-app/main/default/objects/Social_Post__c/Social_Post__c.object-meta.xml
<CustomObject>
    <label>Warroom Social Post</label>
    <nameField>
        <displayFormat>SP-{yyyy}{mm}-{00000}</displayFormat>
        <label>Social Post Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Warroom Social Posts</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>