force-app/main/default/objects/Social_Post__c/fields/Accept_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Accept_Datetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Accept Datetime</label>
    <type>DateTime</type>
</CustomField>