force-app/main/default/objects/Social_Post__c/fields/Agent_SLA_sec__c.field-meta.xml
<CustomField>
    <fullName>Agent_SLA_sec__c</fullName>
    <description>SLA for Post start from customer post msg until agent close case relate to post</description>
    <formula>IF( ISPICKVAL(Status__c, &quot;Reject&quot;),0,(Case__r.ClosedDate - Post_Date__c) *24*60*60)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent SLA (sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>