force-app/main/default/objects/Social_Post__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Warroom Social Posts</relationshipLabel>
    <relationshipName>Custom_Social_Posts_Case</relationshipName>
    <type>Lookup</type>
</CustomField>