force-app/main/default/objects/Social_Post__c/fields/Case_Created_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Date_Date__c</fullName>
    <formula>DATEVALUE(Case__r.CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Created Date (Date)</label>
    <type>Date</type>
</CustomField>