force-app/main/default/objects/Social_Post__c/fields/Case_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Created_Date_Time__c</fullName>
    <formula>MID(TEXT(  Case__r.CreatedDate + 7/24), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Created Date (Time)</label>
    <type>Text</type>
</CustomField>