force-app/main/default/objects/Social_Post__c/fields/Comment_No__c.field-meta.xml
<CustomField>
    <fullName>Comment_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>