force-app/main/default/objects/Social_Post__c/fields/Conversation_Id_List__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id_List__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Conversation Id List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>