force-app/main/default/objects/Social_Post__c/fields/Default_Social_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Social_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Default Social Account</label>
    <length>20</length>
    <type>Text</type>
</CustomField>