force-app/main/default/objects/Social_Post__c/fields/End_Date_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Date__c</fullName>
    <formula>DATEVALUE(End_DateTime__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date (Date)</label>
    <type>Date</type>
</CustomField>