force-app/main/default/objects/Social_Post__c/fields/Intention__c.field-meta.xml
<CustomField>
    <fullName>Intention__c</fullName>
    <label>Intention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defame</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>