force-app/main/default/objects/Social_Post__c/fields/Internal_Link__c.field-meta.xml
<CustomField>
    <fullName>Internal_Link__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Internal Link</label>
    <type>Url</type>
</CustomField>