force-app/main/default/objects/Social_Post__c/fields/LastTransferUser__c.field-meta.xml
<CustomField>
    <fullName>LastTransferUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Streaming API subscribe filter</description>
    <label>LastTransferUser</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Warroom_Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>