force-app/main/default/objects/Social_Post__c/fields/Post_Author_Type__c.field-meta.xml
<CustomField>
    <fullName>Post_Author_Type__c</fullName>
    <label>Post Author Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>