force-app/main/default/objects/Social_Post__c/fields/Post_Body__c.field-meta.xml
<CustomField>
    <fullName>Post_Body__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Body</label>
    <length>3200</length>
    <type>Html</type>
</CustomField>