force-app/main/default/objects/Social_Post__c/fields/Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Date</label>
    <type>DateTime</type>
</CustomField>