force-app/main/default/objects/Social_Post__c/fields/Post_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Post_Date_Time__c</fullName>
    <formula>MID(TEXT( Post_Date__c + 7/24), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Date (Time)</label>
    <type>Text</type>
</CustomField>