force-app/main/default/objects/Social_Post__c/fields/Post_ID__c.field-meta.xml
<CustomField>
    <fullName>Post_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>