force-app/main/default/objects/Social_Post__c/fields/Post_Title__c.field-meta.xml
<CustomField>
    <fullName>Post_Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Post Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>