force-app/main/default/objects/Social_Post__c/fields/Post_Type__c.field-meta.xml
<CustomField>
    <fullName>Post_Type__c</fullName>
    <label>Post Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>post</fullName>
            </value>
            <value>
                <fullName>comment</fullName>
            </value>
            <value>
                <fullName>Tweet</fullName>
            </value>
            <value>
                <fullName>Inbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>