force-app/main/default/objects/Social_Post__c/fields/Reject_Comment__c.field-meta.xml
<CustomField>
    <fullName>Reject_Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reject Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>