force-app/main/default/objects/Social_Post__c/fields/Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reject_Reason__c</fullName>
    <label>Reject Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ไม่เกี่ยวข้อง</fullName>
            </value>
            <value>
                <fullName>โฆษณาแฝง</fullName>
            </value>
            <value>
                <fullName>อื่นๆ</fullName>
            </value>
            <value>
                <fullName>Sticker</fullName>
            </value>
            <value>
                <fullName>ลูกค้าถามซ้ำ</fullName>
            </value>
            <value>
                <fullName>Facebook ดึงเคสย้อนหลัง</fullName>
            </value>
            <value>
                <fullName>Crisis touch และมีการโพสต์อัพเดทสถานะว่ากลับมาใช้งานได้แล้ว</fullName>
            </value>
            <value>
                <fullName>ลูกค้าบ่นทั่วไป(ไม่พอใจนโยบายสมัครทัช) ทั้งนี้เคลียร์ทาง inbox แล้ว</fullName>
            </value>
            <value>
                <fullName>ttb touch ขัดข้อง</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>