force-app/main/default/objects/Social_Post__c/fields/Reply_Social_ID__c.field-meta.xml
<CustomField>
    <fullName>Reply_Social_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Reply Social ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>