force-app/main/default/objects/Social_Post__c/fields/Reply_to_Social_Post__c.field-meta.xml
<CustomField>
    <fullName>Reply_to_Social_Post__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reply to Social Post</label>
    <referenceTo>Social_Post__c</referenceTo>
    <relationshipName>Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>