force-app/main/default/objects/Social_Post__c/fields/SLA_Time__c.field-meta.xml
<CustomField>
    <fullName>SLA_Time__c</fullName>
    <formula>IF( ISBLANK(SLA__c) ,&quot;&quot;,TEXT(SLA__c/60)&amp;&quot; min&quot;)</formula>
    <label>SLA Time</label>
    <type>Text</type>
</CustomField>