force-app/main/default/objects/Social_Post__c/fields/Social_Post_Author__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_Author__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Social Post Author</label>
    <referenceTo>Social_Post_Author__c</referenceTo>
    <relationshipName>Custom_Social_Posts</relationshipName>
    <type>Lookup</type>
</CustomField>