force-app/main/default/objects/Social_Post__c/fields/Source_Channel__c.field-meta.xml
<CustomField>
    <fullName>Source_Channel__c</fullName>
    <label>Source Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Facebook Inbox</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>LINE Account Connect</fullName>
            </value>
            <value>
                <fullName>Pantip</fullName>
            </value>
            <value>
                <fullName>Pantip Inbox</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
            <value>
                <fullName>Twitter Inbox</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Google Business Review</fullName>
            </value>
            <value>
                <fullName>Google Business QA</fullName>
            </value>
            <value>
                <fullName>Warroom Connect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>