force-app/main/default/objects/Social_Post__c/fields/Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Time__c</fullName>
    <formula>MID(TEXT( Start_DateTime__c + 7/24), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date (Time)</label>
    <type>Text</type>
</CustomField>