force-app/main/default/objects/Social_Post__c/fields/Start_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Start_DateTime__c</fullName>
    <description>Start post date/time</description>
    <formula>Accept_Datetime__c</formula>
    <label>Start DateTime</label>
    <type>DateTime</type>
</CustomField>