force-app/main/default/objects/Social_Post__c/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Subject Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>