force-app/main/default/objects/Social_Post__c/fields/Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Thread ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>