force-app/main/default/objects/Social_Post__c/fields/Thread_Identity_ID__c.field-meta.xml
<CustomField>
    <fullName>Thread_Identity_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Thread Identity ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>