force-app/main/default/objects/Social_Post__c/fields/Thread_Type__c.field-meta.xml
<CustomField>
    <fullName>Thread_Type__c</fullName>
    <label>Thread Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>LINE</fullName>
            </value>
            <value>
                <fullName>Pantip</fullName>
            </value>
            <value>
                <fullName>PantipInbox</fullName>
            </value>
            <value>
                <fullName>Tweet</fullName>
            </value>
            <value>
                <fullName>TwitterInbox</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>GoogleBusinessReview</fullName>
            </value>
            <value>
                <fullName>GoogleBusinessQA</fullName>
            </value>
            <value>
                <fullName>WarroomConnect</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>