force-app/main/default/objects/Social_Post__c/fields/Transfer_Times__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Times__c</fullName>
    <description>for count transfer time for social post transfer log</description>
    <label>Transfer Times</label>
    <summaryForeignKey>Social_Post_Transfer_log__c.Warroom_Social_Post__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>