force-app/main/default/objects/Social_Post__c/fields/Within_30_Min__c.field-meta.xml
<CustomField>
    <fullName>Within_30_Min__c</fullName>
    <description>for check SLA Within 30 min</description>
    <formula>IF(Agent_SLA_sec__c&gt;0 &amp;&amp; Agent_SLA_sec__c &lt;= $CustomMetadata.SLA_Config__mdt.Post.Time_Sec__c, True,False)</formula>
    <label>Within 30 Min</label>
    <type>Checkbox</type>
</CustomField>