force-app/main/default/objects/Social_Post__c/fields/x31_60_Min__c.field-meta.xml
<CustomField>
    <fullName>x31_60_Min__c</fullName>
    <description>for SLA 31-60 min</description>
    <formula>IF( Agent_SLA_sec__c &gt; $CustomMetadata.SLA_Config__mdt.Post.Time_Sec__c &amp;&amp; Agent_SLA_sec__c &lt;= 3600 , True,False)</formula>
    <label>31-60 Min</label>
    <type>Checkbox</type>
</CustomField>