force-app/main/default/objects/Social_Post__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Social_Post_Author__c</columns>
    <columns>Social_Name__c</columns>
    <columns>Case__c</columns>
    <columns>Post_Body__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Source_Channel__c</columns>
    <columns>Post_Date__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>