force-app/main/default/objects/Social_Post__c/listViews/My_Task.listView-meta.xml
<ListView>
    <fullName>My_Task</fullName>
    <columns>NAME</columns>
    <columns>Social_Post_Author__c</columns>
    <columns>Social_Name__c</columns>
    <columns>Case__c</columns>
    <columns>Post_Body__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Source_Channel__c</columns>
    <columns>Interval__c</columns>
    <columns>Post_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Message_Type__c</field>
        <operation>equals</operation>
        <value>Inbound</value>
    </filters>
    <label>My Task</label>
</ListView>