force-app/main/default/objects/Social_Post__c/listViews/Post_KOL_Social_Post.listView-meta.xml
<ListView>
    <fullName>Post_KOL_Social_Post</fullName>
    <columns>NAME</columns>
    <columns>Social_Post_Author__c</columns>
    <columns>Social_Name__c</columns>
    <columns>Case__c</columns>
    <columns>Post_Body__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Notes__c</columns>
    <columns>Post_Date__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Message_Type__c</field>
        <operation>equals</operation>
        <value>Inbound</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Post - KOL</value>
    </filters>
    <label>Post - KOL</label>
    <queue>Post_KOL</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>