force-app/main/default/objects/Social_Post__c/listViews/Post_Pantip_Post_Social_Post.listView-meta.xml
<ListView>
    <fullName>Post_Pantip_Post_Social_Post</fullName>
    <columns>NAME</columns>
    <columns>Social_Post_Author__c</columns>
    <columns>Social_Name__c</columns>
    <columns>Case__c</columns>
    <columns>Post_Body__c</columns>
    <columns>Sentiment__c</columns>
    <columns>Source_Channel__c</columns>
    <columns>Interval__c</columns>
    <columns>Post_Date__c</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Message_Type__c</field>
        <operation>equals</operation>
        <value>Inbound</value>
    </filters>
    <filters>
        <field>OWNER.ALIAS</field>
        <operation>equals</operation>
        <value>Post - Pantip</value>
    </filters>
    <label>Post - Pantip Post</label>
    <queue>Post_Pantip_Post</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>